fixed burger menu visible

--- a/client/src/modules/basket/pages/BasketPage.scss
+++ b/client/src/modules/basket/pages/BasketPage.scss
@@ -32,7 +32,7 @@
       justify-self: center;
       font-size: 36px;
       color: var(--horizontal-line-color);
-      margin-top: 100px;
+      margin: 100px 0;
    }
 
    &__btn-clear-all {
